misaka 제외하고,  동문회 사진 넣음

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h1>Welcome to Star Social!</h1>
+    <h1>Welcome to GEI!</h1>
+    <img src="../static/greeting.jpg" width="40%" height="50%">
 
 {% endblock %}
