--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Star Social</title>
+    <title>GEI 동문회</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -24,18 +24,18 @@
     <nav class="navbar navbar-expand-lg bg-dark mynav" role="navigation" id="navbar">
       <div class="container">
         <div class="navbar-nav align-items-center">
-          <a class="navbar-brand mynav" href="{% url 'home' %}">Star Social</a>
+          <a class="navbar-brand mynav" href="{% url 'home' %}">동문회 홈</a>
         </div>
         <div class="navbar-nav ml-auto">
           {% if user.is_authenticated %}
-            <a class="nav-item nav-link" href="{% url 'posts:create' %}" class="btn btn-simple">Post</a>
-            <a class="nav-item nav-link" href="{% url 'groups:all' %}" class="btn btn-simple">Groups</a>
-            <a class="nav-item nav-link" href="{% url 'groups:create' %}" class="btn btn-simple">Create Group</a>
-            <a class="nav-item nav-link" href="{% url 'accounts:logout' %}" class="btn btn-simple">Log out</a>
+            <a class="nav-item nav-link" href="{% url 'posts:create' %}" class="btn btn-simple">게시물</a>
+            <a class="nav-item nav-link" href="{% url 'groups:all' %}" class="btn btn-simple">그룹들</a>
+            <a class="nav-item nav-link" href="{% url 'groups:create' %}" class="btn btn-simple">그룹 만들기</a>
+            <a class="nav-item nav-link" href="{% url 'accounts:logout' %}" class="btn btn-simple">로그아웃</a>
           {% else %}
-            <a class="nav-item nav-link" href="{% url 'groups:all' %}"class="btn btn-simple">Groups</a>
-            <a class="nav-item nav-link" href="{% url 'accounts:login' %}" class="btn btn-simple">Log in</a>
-            <a class="nav-item nav-link" href="{% url 'accounts:signup' %}" class="btn btn-simple">Sign up</a>
+            <a class="nav-item nav-link" href="{% url 'groups:all' %}"class="btn btn-simple">그룹</a>
+            <a class="nav-item nav-link" href="{% url 'accounts:login' %}" class="btn btn-simple">로그인</a>
+            <a class="nav-item nav-link" href="{% url 'accounts:signup' %}" class="btn btn-simple">가입하기</a>
           {% endif %}
         </div>
       </div>
